[gd_scene load_steps=25 format=2]

[ext_resource path="res://Prefabs/PlayerWin.gd" type="Script" id=1]
[ext_resource path="res://SFX/Pause_Menu.ogg" type="AudioStream" id=2]
[ext_resource path="res://Textures/OfficeTowerTex256.png" type="Texture" id=3]
[ext_resource path="res://UI/Menu/Logo.png" type="Texture" id=4]
[ext_resource path="res://Scripts/OverlayMenu.gd" type="Script" id=5]
[ext_resource path="res://UI/BackToMainButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Models/OfficeTower.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Scripts/LogoAnimator.gd" type="Script" id=8]
[ext_resource path="res://Textures/Pavement.png" type="Texture" id=9]
[ext_resource path="res://Prefabs/Taxi.tscn" type="PackedScene" id=10]
[ext_resource path="res://Shader/Farbverlauf.shader" type="Shader" id=15]
[ext_resource path="res://Prefabs/Player.tscn" type="PackedScene" id=16]
[ext_resource path="res://Textures/Skybox 2560x1280.png" type="Texture" id=17]
[ext_resource path="res://Textures/Gradient_Outrun.tres" type="Gradient" id=18]
[ext_resource path="res://UI/OverlayMenu.tscn" type="PackedScene" id=19]

[sub_resource type="GradientTexture" id=1]
gradient = ExtResource( 18 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 15 )
shader_param/gradient = SubResource( 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 9 )
uv1_scale = Vector3( 10, 10, 10 )

[sub_resource type="BoxShape" id=4]

[sub_resource type="PanoramaSky" id=5]
panorama = ExtResource( 17 )

[sub_resource type="Environment" id=6]
background_mode = 2
background_sky = SubResource( 5 )

[sub_resource type="PhysicsMaterial" id=7]
rough = true

[sub_resource type="SpatialMaterial" id=8]
albedo_texture = ExtResource( 3 )

[sub_resource type="BoxShape" id=9]

[node name="WinScene" type="Spatial"]

[node name="ViewportContainer" type="ViewportContainer" parent="."]
material = SubResource( 2 )
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverlayMenu" parent="ViewportContainer" instance=ExtResource( 19 )]

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 320, 240 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Floor" type="StaticBody" parent="ViewportContainer/Viewport"]
transform = Transform( 299.574, 0, 0, 0, 5.99148, 0, 0, 0, 299.574, 11.4101, -5.98165, 197.328 )

[node name="Floor" type="CSGBox" parent="ViewportContainer/Viewport/Floor"]
material = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="ViewportContainer/Viewport/Floor"]
shape = SubResource( 4 )

[node name="Player" parent="ViewportContainer/Viewport" instance=ExtResource( 16 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -97.4565, 119.969, 48.45 )
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="ViewportContainer/Viewport"]
environment = SubResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 0.651158, 0.758942, 0, -0.758942, 0.651158, -3.75771, 47.0489, 65.9558 )

[node name="Houses" type="Node" parent="ViewportContainer/Viewport"]

[node name="OfficeTower8" type="StaticBody" parent="ViewportContainer/Viewport/Houses"]
transform = Transform( 8.77585, 0, 0, 0, 8.77585, 0, 0, 0, 8.77585, -99.3208, -1.3084, 60.152 )
physics_material_override = SubResource( 7 )

[node name="OfficeTower" type="MeshInstance" parent="ViewportContainer/Viewport/Houses/OfficeTower8"]
transform = Transform( -1.44761e-07, 0, -0.888533, 0, 0.888533, 0, 0.888533, 0, -1.44761e-07, -0.0358086, 0, 1.09406 )
mesh = ExtResource( 7 )
material/0 = SubResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="ViewportContainer/Viewport/Houses/OfficeTower8"]
transform = Transform( 2.59273, 0, 0, 0, 3.38318, 0, 0, 0, 2.59273, 0.37096, 3.82009, 1.06173 )
shape = SubResource( 9 )

[node name="OfficeTower9" type="StaticBody" parent="ViewportContainer/Viewport/Houses"]
transform = Transform( 8.77585, 0, 0, 0, 8.77585, 0, 0, 0, 8.77585, -99.3208, 57.2683, 60.152 )
physics_material_override = SubResource( 7 )

[node name="OfficeTower" type="MeshInstance" parent="ViewportContainer/Viewport/Houses/OfficeTower9"]
transform = Transform( -1.4476e-07, 0, 0.888533, 0, 0.888533, 0, -0.888533, 0, -1.4476e-07, 0.761835, 0, 1.09406 )
mesh = ExtResource( 7 )
material/0 = SubResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="ViewportContainer/Viewport/Houses/OfficeTower9"]
transform = Transform( 2.59273, 0, 0, 0, 3.38318, 0, 0, 0, 2.59273, 0.37096, 3.82009, 1.06173 )
shape = SubResource( 9 )

[node name="WinMusic" type="AudioStreamPlayer" parent="ViewportContainer/Viewport"]
stream = ExtResource( 2 )
volume_db = -6.0
autoplay = true

[node name="OmniLight" type="OmniLight" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -96.6063, 120.746, 45.3874 )
light_energy = 2.0
omni_range = 10.0

[node name="OmniLight2" type="OmniLight" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -91.6063, 122.746, 55.3874 )
light_energy = 2.0
omni_range = 10.0

[node name="OmniLight3" type="OmniLight" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -101.606, 122.746, 55.3874 )
light_energy = 2.0
omni_range = 10.0

[node name="Node" type="Node" parent="ViewportContainer/Viewport"]

[node name="Taxi" parent="ViewportContainer/Viewport/Node" instance=ExtResource( 10 )]
transform = Transform( 2, 0, -3.4641, 0, 4, 0, 3.4641, 0, 2, -104.456, 117.363, 60 )

[node name="Taxi2" parent="ViewportContainer/Viewport/Node" instance=ExtResource( 10 )]
transform = Transform( -2, 0, -3.4641, 0, 4, 0, 3.4641, 0, -2, -90.456, 117.363, 60 )

[node name="SFX" type="AudioStreamPlayer" parent="ViewportContainer"]

[node name="Sprite" type="Sprite" parent="ViewportContainer"]
position = Vector2( 163, 60 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )
script = ExtResource( 8 )

[node name="Menu Functionality" type="Control" parent="ViewportContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="BackToMainButton" parent="ViewportContainer/Menu Functionality" instance=ExtResource( 6 )]
margin_left = 116.0
margin_top = 195.0
margin_right = 216.0
margin_bottom = 245.0
rect_scale = Vector2( 0.8, 0.8 )
[connection signal="pressed" from="ViewportContainer/Menu Functionality/BackToMainButton" to="ViewportContainer/Menu Functionality" method="_on_BackToMainButton_pressed"]
