[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/OverlayMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/ContinueButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/BackToMainButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/ExitButton.tscn" type="PackedScene" id=4]

[node name="OverlayMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
margin_right = 200.0
margin_bottom = 250.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" parent="ColorRect/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 320.0

[node name="BackToMainButton" parent="ColorRect/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 100.0
margin_right = 320.0
margin_bottom = 150.0

[node name="ExitButton" parent="ColorRect/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 200.0
margin_right = 320.0
margin_bottom = 250.0
[connection signal="pressed" from="ColorRect/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/BackToMainButton" to="." method="_on_BackToMainButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
